# urd

./: .gitattributes  .gitignore  Cargo.toml  FIX_ROADMAP.md  LICENSE  README.md  clippy.toml  rust-toolchain.toml  test.urd
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml  release-lsp.yml
benches/: README.md  run.sh
benches/python/: fibonacci.py  fizzbuzz.py  sum.py
benches/urd/: fibonacci.urd  fizzbuzz.urd  sum.urd
crates/urd/: Cargo.toml
crates/urd-derive/: Cargo.toml
crates/urd-derive/src/: lib.rs
crates/urd-derive/tests/: derive_tests.rs
crates/urd-derive/tests/ui/: enum_rejected.rs  enum_rejected.stderr  tuple_struct_rejected.rs  tuple_struct_rejected.stderr
crates/urd-lsp/: Cargo.toml
crates/urd-lsp/src/: builtin_docs.rs  completion.rs  document.rs  main.rs  semantic.rs  user_dict.rs  workspace.rs
crates/urd-quest/: Cargo.toml
crates/urd-quest/src/: localizer.rs  main.rs
crates/urd/benches/: vm_bench.rs
crates/urd/examples/: errors.urd
crates/urd/examples/quest/: cave.urd
crates/urd/src/: erro.rs  lib.rs
crates/urd/src/analysis/: const_reassign.rs  context.rs  dead_branch.rs  dead_end.rs  duplicate_menu_dest.rs  empty_dialogue.rs  exhaustiveness.rs  fluent_decorator.rs  id_decorator.rs  imports.rs  labels.rs  loop_detection.rs  menu_structure.rs  mod.rs  overwritten_assign.rs  possible_typo.rs  semantic_suggest.rs  spellcheck.rs  synonyms.rs  top_level.rs  types.rs  undefined_var.rs  unreachable_label.rs  unused_var.rs
crates/urd/src/analysis/tests/: dead_end_tests.rs  exhaustiveness_tests.rs  render_tests.rs  types_tests.rs
crates/urd/src/compiler/: helpers.rs  loader.rs  mod.rs  state.rs  tests.rs
crates/urd/src/ir/: analysis.rs  dot.rs  mermaid.rs  mod.rs  render_common.rs  sequence.rs
crates/urd/src/lexer/: mod.rs  strings.rs  tokens.rs
crates/urd/src/loc/: ftl.rs  localizer.rs  mod.rs
crates/urd/src/parser/: aliases.rs  ast.rs  block.rs  errors.rs  expr.rs  mod.rs  test_util.rs
crates/urd/src/runtime/: extern_object.rs  mod.rs  value.rs
crates/urd/src/vm/: decorators.rs  env.rs  eval.rs  exec.rs  float_methods.rs  fluent.rs  int_methods.rs  list_methods.rs  loader.rs  map_methods.rs  mod.rs  range_methods.rs  registry.rs  str_methods.rs  tests.rs
crates/urd/tests/: integration.rs
crates/urd/tests/integration/: adversarial.rs  adversarial_new.rs  adversarial_round2.rs  builtin_methods.rs  cycle_test.rs  dot_render.rs  example_smoke.rs  extern_object.rs  fixtures.rs  import.rs  in_operator_and_functions.rs  localiser_e2e.rs  mermaid_render.rs  parser_block_basic.rs  parser_block_enum_match.rs  parser_block_menu.rs  parser_decorator_def.rs  parser_expr.rs  parser_fn_return_type.rs  regression_tests.rs  sequence.rs  string_format_and_extern.rs  vm_decorator.rs
docs/: book.toml  highlight-ftl.js  highlight-urd.js
docs/src/: SUMMARY.md  introduction.md
docs/src/analysis/: error-lints.md  loop-detection.md  overview.md  warning-lints.md
docs/src/api/: compiler-error.md  event.md  prelude.md  runtime-value.md  vm-step.md
docs/src/editors/: helix.md  neovim.md  zed.md
docs/src/examples/: cave-adventure.md  circular-imports.md  localized-merchant.md  multifile.md
docs/src/getting-started/: first-script.md  installation.md  running-with-quest.md
docs/src/integration/: budget-and-limits.md  compiling.md  decorator-registry.md  dice-roller.md  error-handling.md  events-and-choices.md  extern-values.md  file-loaders.md  overview.md  pull-based-execution.md  vm.md
docs/src/language/: builtin-decorators.md  comments.md  constants.md  control-flow.md  decorators.md  dialogue.md  dice.md  entry-points.md  enums.md  extern-values.md  functions.md  globals.md  if-elif-else.md  imports.md  jump-and-return.md  labels-and-jump.md  lists-and-maps.md  match.md  menus.md  multiline-dialogue.md  operators.md  overview.md  script-decorators.md  speakers.md  strings.md  structs.md  type-annotations.md  variables-and-types.md
docs/src/localization/: fluent-decorator.md  generating-ftl.md  implementing-localizer.md  overview.md  plural-rules.md
docs/src/reference/: builtin-methods.md  grammar.md  keywords.md  operators.md
docs/src/tools/: lsp-capabilities.md  lsp-diagnostics.md  lsp-spellcheck.md  lsp.md  quest-export.md  quest-gen-l10n.md  quest-run.md  quest.md
examples/: collections.urd  errors.urd  extern_demo.urd
examples/circular/: main.urd  tavern.urd
examples/localization/: README.md  bazaar.urd  merchant.urd
examples/localization/i18n/en-US/: bazaar.ftl  merchant.ftl
examples/localization/i18n/pl-PL/: bazaar.ftl  merchant.ftl
examples/localization/i18n/ru-RU/: bazaar.ftl  merchant.ftl
examples/multifile/: characters.urd  dungeon.urd  items.urd  main.urd  village.urd
examples/quest/: cave.urd
examples/russian/: les.urd
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/fuzz_compiler/: slow-unit-65926283d25e66b44c568348615b4e1e35c497c6
fuzz/corpus/seed/: dice.urd  functions.urd
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs  fuzz_parser.rs
src/: erro.rs  lib.rs
src/analysis/: context.rs  dead_end.rs  exhaustiveness.rs  mod.rs  types.rs
src/analysis/tests/: dead_end_tests.rs  exhaustiveness_tests.rs  mod.rs  render_tests.rs  types_tests.rs
src/compiler/: loader.rs  mod.rs
src/ir/: analysis.rs  dot.rs  mermaid.rs  mod.rs  sequence.rs
src/lexer/: mod.rs  strings.rs  tokens.rs
src/parser/: aliases.rs  ast.rs  block.rs  errors.rs  expr.rs  mod.rs
src/runtime/: value.rs
src/vm/: mod.rs
tests/: integration.rs  parser_block_enum_match.rs  parser_block_menu.rs  parser_expr.rs
tests/integration/: dot_render.rs  mermaid_render.rs  parser_block_basic.rs  parser_block_menu.rs  parser_expr.rs
tree-sitter-urd/: README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-urd/queries/: highlights.scm  indents.scm  locals.scm
tree-sitter-urd/src/: grammar.json  node-types.json  parser.c
tree-sitter-urd/test/corpus/: expressions.txt  literals.txt  statements.txt
