cargo-features = ["profile-rustflags"]

[package]
name = "urd"
version = "0.0.1"
edition = "2024"
description = "a lang [very WIP]"
license = "MIT"
repository = "https://github.com/metdxt/urd"

[[bin]]
name = "quest"
path = "src/bin/quest.rs"
required-features = ["cli"]

[dependencies]
ariadne = "0.6.0"
chumsky = { version="0.11.2", features=[ "pratt" ] }
logos = "0.15.1"
logos-display = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
log = "0.4"
env_logger = { version = "0.11", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
cli = ["dep:crossterm", "dep:env_logger"]

[profile.dev]
incremental=true

[profile.test]
opt-level = 0
incremental = false
debug = 0
codegen-units = 1
rustflags = ["-Z", "codegen-backend=cranelift"]

[profile.test.build-override]
opt-level = 0
codegen-units = 1
debug = false

[lints]
clippy.unwrap_used = "deny"
clippy.expect_used = "deny"
rust.missing_docs = "warn"
