cargo-features = ["profile-rustflags"]

[workspace]
resolver = "3"
members = [
    "crates/urd",
    "crates/urd-lsp",
    "crates/urd-quest",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/metdxt/urd"

[workspace.dependencies]
# ── Workspace crates ──────────────────────────────────────────────────────────
urd = { path = "crates/urd" }

# ── Parsing / lexing ──────────────────────────────────────────────────────────
chumsky = { version = "0.11.2", features = ["pratt"] }
logos = "0.15.1"
logos-display = "0.1.3"
ariadne = "0.6.0"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Graph analysis ────────────────────────────────────────────────────────────
petgraph = "0.6"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2.0.17"

# ── Logging ───────────────────────────────────────────────────────────────────
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── LSP ───────────────────────────────────────────────────────────────────────
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
ropey = "1.6"

# ── CLI (optional) ────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"

[profile.dev]
incremental = true

[profile.test]
opt-level = 0
incremental = false
debug = 0
codegen-units = 1
rustflags = ["-Z", "codegen-backend=cranelift"]

[profile.test.build-override]
opt-level = 0
codegen-units = 1
debug = false

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
