[workspace]
resolver = "3"
members = [
    "crates/urd",
    "crates/urd-derive",
    "crates/urd-lsp",
    "crates/urd-quest",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT-0"
repository = "https://github.com/metdxt/urd"

[workspace.dependencies]
# ── Workspace crates ──────────────────────────────────────────────────────────
urd = { path = "crates/urd", version = "0.1.0" }
urd-derive = { path = "crates/urd-derive", version = "0.1.0" }

# ── Parsing / lexing ──────────────────────────────────────────────────────────
chumsky = { version = "0.12.0", features = ["pratt"] }
logos = "0.16.1"
logos-display = "0.1.3"
ariadne = "0.6.0"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# ── Graph analysis ────────────────────────────────────────────────────────────
petgraph = "0.8"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2.0.17"

# ── Random number generation ──────────────────────────────────────────────────
fastrand = "2"


# ── Logging ───────────────────────────────────────────────────────────────────
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── LSP ───────────────────────────────────────────────────────────────────────
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
ropey = "1.6"

# ── Localisation ──────────────────────────────────────────────────────────────
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }

# ── CLI (optional) ────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"

# ── Spell checking ────────────────────────────────────────────────────────────
symspell = "0.5.2"
whatlang = "0.18"
ureq = "3"
dirs = "6"

[profile.dev]
incremental = true

[profile.test]
opt-level = 0
incremental = false
debug = 0
codegen-units = 1

[profile.test.build-override]
opt-level = 0
codegen-units = 1
debug = false

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
