[package]
name = "urd-derive"
description = "Derive macros for the urd scripting language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["urd", "derive", "proc-macro", "dialogue"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
urd = { workspace = true }
trybuild = "1"

[lints]
workspace = true
