[package]
name = "urd-lsp"
description = "Language Server Protocol implementation for the Urd dialogue scripting language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "urd-lsp"
path = "src/main.rs"

[dependencies]
urd.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
dashmap.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
chumsky.workspace = true


[lints]
workspace = true
