[package]
name = "urd-lsp"
description = "Language Server Protocol implementation for the Urd dialogue scripting language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["urd", "lsp", "language-server", "dialogue"]
categories = ["development-tools"]

[[bin]]
name = "urd-lsp"
path = "src/main.rs"

[dependencies]
urd.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
dashmap.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
chumsky.workspace = true


[features]
## Spell-checking support: automatic language detection via whatlang and
## per-language SymSpell dictionaries.  Enabled by default — disable with
## --no-default-features for a stripped binary without the embedded dicts.
##
## Install with spellcheck (default):
##   cargo install --path ./crates/urd-lsp
##
## Install without spellcheck:
##   cargo install --no-default-features --path ./crates/urd-lsp
default = ["spellcheck"]
spellcheck = ["urd/spellcheck"]

[lints]
workspace = true
