[package]
name = "urd-quest"
description = "Interactive terminal runner for Urd dialogue scripts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["urd", "cli", "dialogue", "runner", "gamedev"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "quest"
path = "src/main.rs"

[dependencies]
urd.workspace = true
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
log.workspace = true
chumsky.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true

[lints]
workspace = true
