[package]
name = "urd"
description = "a lang [very WIP]"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ariadne.workspace = true
chumsky.workspace = true
logos.workspace = true
logos-display.workspace = true
petgraph.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
symspell = { workspace = true, optional = true }
whatlang = { workspace = true, optional = true }

[features]
## Embed frequency dictionaries and enable the SymSpell-based spellcheck
## analysis pass, including automatic language detection via whatlang.
## Disabled by default to avoid bloating binaries that do not need
## spell-checking (CLI runners, the VM, etc.).
## Enable with: cargo build -p urd --features spellcheck
spellcheck = ["dep:symspell", "dep:whatlang"]

[lints]
workspace = true
