[package]
name = "urd"
description = "a lang [very WIP]"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ariadne.workspace = true
rand = { workspace = true }
chumsky.workspace = true
logos.workspace = true
logos-display.workspace = true
petgraph.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
symspell = { workspace = true, optional = true }
whatlang = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[features]
## Enable the SymSpell-based spellcheck analysis pass, automatic language
## detection via whatlang, and lazy dictionary download into the user's
## cache directory via ureq.  Disabled by default to keep the core library
## lean — no embedded dictionaries, no network code unless you opt in.
## Enable with: cargo build -p urd --features spellcheck
spellcheck = ["dep:symspell", "dep:whatlang", "dep:ureq", "dep:dirs"]

## Expose `parser::test_util` and the `parse_test!` macro for use in
## integration tests and downstream test helpers.  Never enable this in
## production builds — the module is test scaffolding only.
test-support = []

[[test]]
name = "integration"
required-features = ["test-support"]

[lints]
workspace = true
